fix align-center

--- a/src/assets/template/css/main.css
+++ b/src/assets/template/css/main.css
@@ -576,11 +576,15 @@ button {
   position: relative;
   z-index: 3;
   padding-top: 37px;
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
-  -ms-flex-align: center;
-  align-items: center; }
+  height: 100%; }
+  @media (min-width: 1200px) {
+    .wrapper {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .maintext-bottom p {
   color: #fff;
@@ -594,10 +598,12 @@ button {
   margin-bottom: 24px; }
 
 .packages__grid {
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
   @media (min-width: 550px) {
@@ -620,6 +626,7 @@ button {
     background: linear-gradient(135deg, rgba(0, 0, 0, 0) 30px, #1698d9 0) 0 0;
     padding: 4px;
     border-radius: 0 10px 10px 10px;
+    -webkit-transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1);
     transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1); }
   .package__inner {
     background: linear-gradient(135deg, rgba(0, 0, 0, 0) 29px, #f2f2f2 0) 0 0;
@@ -628,6 +635,7 @@ button {
     position: relative;
     border-radius: 0 8px 8px 8px;
     overflow: hidden;
+    -webkit-transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1);
     transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1); }
   .package__call {
     color: #fff;
@@ -649,6 +657,7 @@ button {
   .package__body {
     position: relative;
     z-index: 2;
+    -webkit-transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1);
     transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1); }
   .package__description {
     color: #666666;
@@ -680,6 +689,7 @@ button {
     bottom: 0;
     background-position: left bottom;
     background-repeat: no-repeat;
+    -webkit-transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1);
     transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1); }
 
 .package--hover .package__card {
@@ -747,16 +757,22 @@ button {
   right: 11px;
   color: #fff;
   background-color: #1698d9;
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
   border-radius: 50%;
   line-height: 100%;
+  -webkit-transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1);
   transition: all 0.2s cubic-bezier(0.3, 0, 0.2, 1); }
   .package-volume__digits {
     text-align: center;
